# avr-psx-nrf-remote

./: CMakeLists.txt  README.md  host.c  turtle.c
lib/: nrf24.c  nrf24.h  psx.c  psx.h
